test-suite/tests/ui/designated/no_argument.stderr
error: an argument must match the designated parameter
 --> tests/ui/designated/no_argument.rs:8:23
  |
8 | impl<#[stated] S> Test<> {
  |                       ^
